remove white space and bolding; fix credit card pics

--- a/smallslive/static/sass/application.scss
+++ b/smallslive/static/sass/application.scss
@@ -208,7 +208,7 @@ body.search .facets {
     }
     .row:not(.days-of-week) .day {
       height: 15em; 
-    }  
+    }
   } 
 }
 /*=Event/Media Page*/
@@ -229,9 +229,7 @@ table.artist-past-gigs-media {
 /*=Signup screens*/
 .trigger-credit-card-fields {
   margin-bottom: $margin-bottom;
-  label {
-    font-weight: bold;
-  }
+ 
 }
 .social-signup:not(.authenticated-by-social) {
   margin-bottom: $margin-bottom;
